// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) No active user. Default filter 1`] = `
<div
  className="entry-index-menu"
>
  <div
    className="the-menu"
  >
    <div
      className="main-menu"
    >
      <div
        className="sm-menu"
      >
        <div
          className="custom-dropdown float-left"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            <div
              className="label"
            >
              Hot
            </div>
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10L12,15L17,10H7Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="lg-menu"
      >
        <ul
          className="nav nav-pills nav-fill"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-trending"
              href="/trending"
              onClick={[Function]}
            >
              Trending
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-hot active"
              href="/hot"
              onClick={[Function]}
            >
              Hot
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-created"
              href="/created"
              onClick={[Function]}
            >
              New
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <span
    className="list-style-toggle"
    onClick={[Function]}
    title="Toggle list style"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`(2) No active user. Trending filter 1`] = `
<div
  className="entry-index-menu"
>
  <div
    className="the-menu"
  >
    <div
      className="main-menu"
    >
      <div
        className="sm-menu"
      >
        <div
          className="custom-dropdown float-left"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            <div
              className="label"
            >
              Trending
            </div>
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10L12,15L17,10H7Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="lg-menu"
      >
        <ul
          className="nav nav-pills nav-fill"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-trending active"
              href="/trending"
              onClick={[Function]}
            >
              Trending
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-hot"
              href="/hot"
              onClick={[Function]}
            >
              Hot
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-created"
              href="/created"
              onClick={[Function]}
            >
              New
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <span
    className="list-style-toggle"
    onClick={[Function]}
    title="Toggle list style"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`(3) Active user. Trending filter 1`] = `
<div
  className="entry-index-menu"
>
  <div
    className="the-menu"
  >
    <div
      className="main-menu"
    >
      <div
        className="sm-menu"
      >
        <div
          className="custom-dropdown float-left"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            <div
              className="label"
            >
              Trending
            </div>
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10L12,15L17,10H7Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="lg-menu"
      >
        <ul
          className="nav nav-pills nav-fill"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-feed"
              href="/@foo/feed"
              onClick={[Function]}
            >
              Feed
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-trending active"
              href="/trending"
              onClick={[Function]}
            >
              Trending
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-hot"
              href="/hot"
              onClick={[Function]}
            >
              Hot
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-created"
              href="/created"
              onClick={[Function]}
            >
              New
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <span
    className="list-style-toggle"
    onClick={[Function]}
    title="Toggle list style"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`(4) Active user. Friends 1`] = `
<div
  className="entry-index-menu"
>
  <div
    className="the-menu"
  >
    <div
      className="main-menu"
    >
      <div
        className="sm-menu"
      >
        <div
          className="custom-dropdown float-left"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            <div
              className="label"
            >
              Feed
            </div>
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10L12,15L17,10H7Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="lg-menu"
      >
        <ul
          className="nav nav-pills nav-fill"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-feed active"
              href="/@foo/feed"
              onClick={[Function]}
            >
              Feed
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-trending"
              href="/trending"
              onClick={[Function]}
            >
              Trending
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-hot"
              href="/hot"
              onClick={[Function]}
            >
              Hot
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-created"
              href="/created"
              onClick={[Function]}
            >
              New
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="sub-menu"
    >
      <ul
        className="nav nav-pills nav-fill"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            href="/@foo/feed"
            onClick={[Function]}
          >
            Friends
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/created/my"
            onClick={[Function]}
          >
            Communities
          </a>
        </li>
      </ul>
    </div>
  </div>
  <span
    className="list-style-toggle"
    onClick={[Function]}
    title="Toggle list style"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`(5) Active user. Communities 1`] = `
<div
  className="entry-index-menu"
>
  <div
    className="the-menu"
  >
    <div
      className="main-menu"
    >
      <div
        className="sm-menu"
      >
        <div
          className="custom-dropdown float-left"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            <div
              className="label"
            >
              Feed
            </div>
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10L12,15L17,10H7Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="lg-menu"
      >
        <ul
          className="nav nav-pills nav-fill"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-feed active"
              href="/@foo/feed"
              onClick={[Function]}
            >
              Feed
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-trending"
              href="/trending"
              onClick={[Function]}
            >
              Trending
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-hot"
              href="/hot"
              onClick={[Function]}
            >
              Hot
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-created"
              href="/created"
              onClick={[Function]}
            >
              New
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="sub-menu"
    >
      <ul
        className="nav nav-pills nav-fill"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/@foo/feed"
            onClick={[Function]}
          >
            Friends
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            href="/created/my"
            onClick={[Function]}
          >
            Communities
          </a>
        </li>
      </ul>
    </div>
  </div>
  <span
    className="list-style-toggle"
    onClick={[Function]}
    title="Toggle list style"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`(6) No active user. Communities 1`] = `
<div
  className="entry-index-menu"
>
  <div
    className="the-menu"
  >
    <div
      className="main-menu"
    >
      <div
        className="sm-menu"
      >
        <div
          className="custom-dropdown float-left"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            <div
              className="label"
            >
              Trending
            </div>
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10L12,15L17,10H7Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="lg-menu"
      >
        <ul
          className="nav nav-pills nav-fill"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-trending active"
              href="/trending"
              onClick={[Function]}
            >
              Trending
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-hot"
              href="/hot"
              onClick={[Function]}
            >
              Hot
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link link-created"
              href="/created"
              onClick={[Function]}
            >
              New
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <span
    className="list-style-toggle"
    onClick={[Function]}
    title="Toggle list style"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;
